--- a/docs/src/templates/docs.css
+++ b/docs/src/templates/docs.css
@@ -305,7 +305,7 @@ h1, h2, h3, h4, h5 {
   border-collapse: collapse;
 }
 
-.table th:FIRST-CHILD {
+.table th:first-child {
   text-align: right;
 }
 
@@ -313,4 +313,12 @@ h1, h2, h3, h4, h5 {
 .table td {
   border: 1px solid black;
   padding: .5em 1em;
+}
+.table th {
+  white-space: nowrap;
+}
+
+.table th.section {
+  text-align: left;
+  background-color: lightgray;
 }
